# xiaozhi-server-rs

./: Cargo.toml  LICENSE  README.md  README.zh-TW.md  Settings.toml  beforbuild.bat  settings.toml
.github/workflows/: rust.yml
src/: main.rs
src/config/: mod.rs
src/handlers/: mod.rs  ota.rs  ota_types.rs  websocket.rs
src/services/: mcp.rs  mod.rs
src/services/audio/: mod.rs  opus_codec.rs  resampler.rs
src/services/db/: memory.rs  mod.rs  sql.rs
src/services/llm/: gemini.rs  mod.rs  ollama.rs  openai.rs
src/services/stt/: local.rs  mod.rs  sensevoice.rs
src/services/tts/: edge.rs  gemini.rs  local.rs  mod.rs  opus.rs
src/state/: mod.rs
src/traits/: mod.rs
xiaozhi_server/src/: main.rs
