[package]
name = "xiaozhi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
config = "0.15"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.9", features = ["std_rng"] }
chrono = "0.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
